@@ -35,6 +35,7 @@ CDEPEND="
 		dev-qt/qtprintsupport:5
 		dev-qt/qtnetwork:5
 		dev-qt/qtconcurrent:5
+        dev-qt/qtopengl:5
 		app-text/poppler"
 RDEPEND="${CDEPEND}"
 DEPEND="${CDEPEND}
