@@ -47,6 +47,7 @@
 - [#808] New feature. Global line width option.
 - [#814] Make "\" valid character.
 - [#818] Improve Piece path validation. Check uniqueness.
+- [#819] Use OpenGL as render for view.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
